--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-<h1>Contacts</h1>
-<p>I STILL dont know[snap:evanp2507]</p>
-<img src="galaxy.jpg" alt="Italian Trulli">
+<h1>Home</h1>
+<p>I dont even know.</p>
+<img src="skiing.jpg" alt="Italian Trulli">
 <img src="" alt="Italian Trulli">
 </body>
 </html>
