--- a/dillons new.html
+++ b/dillons new.html
@@ -5,7 +5,7 @@
   <html>
   <head>
     <ul>
-      <li><a href="Dillons file no.1.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="Dillons new.html">News</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="about.html">About</a></li>
