--- a/contact.html
+++ b/contact.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="michael.css">
-<ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="basketball.html">News</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-
-<style>
-body {
-  background-color: lightblue;
-}
-
-h1 {
-  color: white;
-  text-align: center;
-}
-
-p {
-  font-family: verdana;
-  font-size: 20px;
-}
-</style>
+  <ul>
+    <li><a href="Dillons file no.1.html">Home</a></li>
+    <li><a href="dillons new.html">News</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="index.html">About</a></li>
+  </ul>
+    <link rel="stylesheet" href="Dillons file no.2.css">
+<title>Page Title</title>
 </head>
 <body>
 
-<img src="oh yee.jpeg" alt="Girl in a jacket" width="500" height="500">
-
-
-
+<h1>Contacts</h1>
+<p>I STILL dont know</p>
+<img src="galaxy.jpg" alt="Italian Trulli">
+<img src="" alt="Italian Trulli">
 </body>
 </html>
