--- a/dillons new.html
+++ b/dillons new.html
@@ -5,10 +5,10 @@
   <html>
   <head>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="Dillons new.html">News</a></li>
+      <li><a href="Dillons file no.1.html">Home</a></li>
+      <li><a href="dillons new.html">News</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="about.html">About</a></li>
+      <li><a href="index.html">About</a></li>
     </ul>
   <link rel="stylesheet" href="Dillons file no.2.css">
 <title>News</title>
